# software-renderer

./: CMakeLists.txt  README.md
ersatz/: CMakeLists.txt
ersatz/include/ers/: allocators.h  common.h  hash_map.h  linalg.h  macros.h  matrix.h  quaternion.h  typedefs.h  vec.h  vector.h
ersatz/src/: allocators.cpp  common.cpp
images/: Thumbs.db
main/: CMakeLists.txt
main/glad/include/glad/: glad.h
main/glad/src/: glad.c
main/includes/: blinn_phong_shader.h  camera.h  debug_light_shader.h  gl_shader_program.h  gl_surface.h  image.h  mesh.h  ray.h  shader_program.h  shadowmap_shader.h  simple_shader.h  software_renderer.h  timer.h  transform.h  window.h
main/src/: camera.cpp  gl_shader_program.cpp  gl_surface.cpp  image.cpp  main.cpp  mesh.cpp  ray.cpp  software_renderer.cpp  timer.cpp  transform.cpp  window.cpp
working_build/: software_renderer.data  software_renderer.html  software_renderer.js  software_renderer.wasm
